Fix issues with bar chart alignment / padding

--- a/static/style.css
+++ b/static/style.css
@@ -184,12 +184,13 @@ stroke-width: 10px;
 .listItem {
   position: relative;
   height: 2em;
-  padding: 10px;
+  padding: 10px 0;
 }
 .listItem.highlighted {
   background-color: #ffd92f;
 }
 .listItem .name {
+  padding-left: 10px;
   white-space: nowrap;
 }
 .listItem .bar {
